Remove SonarLint errors